test/errors/future_import_in_scope.py
def f():
    from __future__ import annotations
